# rain-rust-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yaml  labeler.yml
.github/workflows/: changes.yaml  ci.yaml  labeler.yaml  release.yaml
docs/: managing_cards.md  managing_users.md  signup.md
examples/: basic_client.rs  initiate_user_application.rs  manage_corporate_users.rs  signup_consumer.rs  signup_corporate.rs
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
src/api/: applications.rs  balances.rs  cards.rs  companies.rs  contracts.rs  disputes.rs  keys.rs  mod.rs  payments.rs  reports.rs  shipping_groups.rs  signatures.rs  subtenants.rs  transactions.rs  users.rs  webhooks.rs
src/models/: applications.rs  axum.rs  balances.rs  cards.rs  charges.rs  common.rs  companies.rs  contracts.rs  disputes.rs  keys.rs  mod.rs  payments.rs  reports.rs  shipping_groups.rs  signatures.rs  subtenants.rs  transactions.rs  users.rs  webhooks.rs
